--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,19 @@
 {
-  "functions": {
-    "api/main.py": {
-      "maxDuration": 60
+  "builds": [
+    {
+      "src": "app.py",
+      "use": "@vercel/python"
     }
-  },
+  ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/api/main.py"
+      "dest": "app.py"
     }
-  ]
+  ],
+  "functions": {
+    "app.py": {
+      "maxDuration": 120
+    }
+  }
 }
